force-app/main/default/objects/Categorie_SAV__c/Categorie_SAV__c.object-meta.xml
<CustomObject>
    <label>Categorie SAV</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catégories SAV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>