force-app/main/default/objects/Categorie_SAV__c/fields/Delai_Estime_Jours__c.field-meta.xml
<CustomField>
    <fullName>Delai_Estime_Jours__c</fullName>
    <label>Delai Estime Jours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>