force-app/main/default/objects/Categorie_SAV__c/fields/Fourchette_Prix_Max__c.field-meta.xml
<CustomField>
    <fullName>Fourchette_Prix_Max__c</fullName>
    <label>Fourchette Prix Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>