force-app/main/default/objects/Categorie_SAV__c/fields/Fourchette_Prix_Min__c.field-meta.xml
<CustomField>
    <fullName>Fourchette_Prix_Min__c</fullName>
    <label>Fourchette Prix Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>