force-app/main/default/objects/Categorie_SAV__c/fields/Icone_URL__c.field-meta.xml
<CustomField>
    <fullName>Icone_URL__c</fullName>
    <label>Icone URL</label>
    <type>Url</type>
</CustomField>